# lj-potential-sim

./: Cargo.toml  README.md  index.html
.github/workflows/: pages.yml
docs/: PLAN.md
src/: app.rs  lib.rs  main.rs  params.rs  simulation.rs
