[package]
name = "lj-potential-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
] }
log = "0.4"
rand = { version = "0.9", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
